2005-11-14  Kjartan Maraas  <kmaraas@gnome.org>

	* at-startup-session.c: Mark at_startup_string_compare() static.

2004-11-09  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: install the .desktop file in
	$(datadir)/applications.
	
	* at-properties.desktop.in: add OnlyShowIn=GNOME;

2004-10-14  Jody Goldberg <jody@gnome.org>

	* Release 2.8.1

Thu Sep  2 17:06:28 2004  Jonathan Blandford  <jrb@redhat.com>

	* main.c: (cb_dialog_response): Change to use help docs instead of
	the "foo"/"bar" that's there.

2004-08-20  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* main.c: (setup_dialog):
	Use themed icon for window hint.

2004-04-15  Jody Goldberg <jody@gnome.org>

	* Release 2.6.1

2004-04-01  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.3

2004-03-30  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.1

2004-03-23  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0

2004-03-11  Jody Goldberg <jody@gnome.org>

	* Release 2.5.4

2003-11-27  Muktha <muktha.narayan@wipro.com>

	* main.c: Do not popup the logout dialog when the close button (X) of
	window manager is clicked. Fixes bug #124032.

2004-02-13  Jody Goldberg <jody@gnome.org>

	* Release 2.5.3

2004-01-14  Jody Goldberg <jody@gnome.org>

	* Release 2.5.2

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1.1

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1

2003-10-28  Jody Goldberg <jody@gnome.org>

	* Release 2.5.0

2003-08-01  Dennis Cranston  <dennis_cranston at yahoo com>

	* at-enable-dialog.glade: Patch to add two more pixels of spacing
	between action area and vbox of preferences dialog.
	
Fri Aug  1 14:28:52 2003  Jonathan Blandford  <jrb@redhat.com>

	* main.c (init_startup_state): remove markup tags from translated
	strings, #118801.

2003-07-18  Jonathan Blandford  <jrb@gnome.org>

	* main.c: Add a check to confirm that the AT's are installed.  Add
	a warning message if they are not.  Change widget naming scheme.

	* at-enable-dialog.glade: Change widget naming scheme.
