@@ -1,3 +1,7 @@
+2006-06-06  Sergey Udaltsov <svu@gnome.com>
+
+	Makefile.am: added $(GNOMECC_CAPPLETS_LIBS)
+
 2006-02-17  Rodrigo Moya <rodrigo@novell.com>
 
 	Fixes #327021
