@@ -1,3 +1,7 @@
+2006-06-06  Sergey Udaltsov <svu@gnome.org>
+
+	* Makefile.am: added $(GNOMECC_CAPPLETS_LIBS)
+
 2005-11-14  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* at-startup-session.c: Mark at_startup_string_compare() static.
